@@ -3,7 +3,7 @@ Version=1.0
 _Name=Last-Exit
 _Comment=Last.fm player
 Exec=last-exit
-Icon=last-exit-24
+Icon=last-exit
 Terminal=false
 Type=Application
 Encoding=UTF-8
